Menambahkan fungsi baru lagi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Latihan Git</title>
 </head>
 <body>
+    <header>Ini adalah bagian header</header>
     <h1>Algi Ganteng Sekali</h1>
     <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex esse aut in impedit velit neque dolorum maiores doloremque molestiae vero, repellat quia deleniti praesentium. Aperiam sit necessitatibus asperiores accusantium at.</div>
+    <footer>Ini adalah bagian footer</footer>
+    <h2>Ini adalah perubahan baru</h2>
+    <h3>Perubahan yang baru lagi</h3>
+    <h4>Perubahan yang baru lagi</h4>
 </body>
 </html>
+
