--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h3>Perubahan yang baru lagi</h3>
     <h4>Perubahan yang baru lagi</h4>
     <h5>Menambahkan head 5</h5>
+    <h6>Lagi</h6>
 </body>
 </html>
 
