--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -13,6 +13,7 @@
     <h2>Ini adalah perubahan baru</h2>
     <h3>Perubahan yang baru lagi</h3>
     <h4>Perubahan yang baru lagi</h4>
+    <form action=""></form>
     <h5>Menambahkan head 5</h5>
     <h6>Lagi</h6>
 </body>
